Entrega 2/campibus-microservices/k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: campibus-core-service
spec:
  selector:
    app: campibus-core
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: campibus-payments-service
spec:
  selector:
    app: campibus-payments
  ports:
  - port: 8081
    targetPort: 8080
