Entrega 2/campibus-microservices/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campibus-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /campibus-core
        pathType: Prefix
        backend:
          service:
            name: campibus-core-service
            port: 
              number: 8080
      - path: /campibus-payments
        pathType: Prefix
        backend:
          service: 
            name: campibus-payments-service
            port: 
              number: 8081
